--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="info-section">
-    <h1>Build Your Resume</h1>
+    <h1>Resume Genius</h1>
     <form action="/" method="POST">
         <h3>Answer the 10 questions below to create your resume!</h3>
         <h5>* = Required Field</h5>
