--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,6 +80,10 @@ h1 {
     margin: 0;
     padding: 10px;
     z-index: 1;
+    text-shadow: -1px 1px 0 #000, 
+                  1px 1px 0 #000, 
+                  1px -1px 0 #000, 
+                 -1px -1px 0 #000;
 }
 
 form {
